--- a/public/Home.html
+++ b/public/Home.html
@@ -29,7 +29,7 @@
                 <br/>
                 <div>
                     <label for="eventCost">Event Cost:</label>
-                    <input type="range" id="eventCost" name="event_cost" min="0" max="4" step="1" oninput="updateCostLabel(this.value)">
+                    <input type="range" id="eventCost" name="event_cost" min="0" max="4" step="1" value = "0" oninput="updateCostLabel(this.value)">
                     <span id="costLabel">Free</span>
                 </div>
                 <script>
