--- a/public/UserProfile.html
+++ b/public/UserProfile.html
@@ -37,48 +37,6 @@
             </div>
         </section>
 
-        <!-- User Reviews -->
-        <section class="user-reviews">
-    <h2>Your Reviews</h2>
-    <ul>
-        <li>
-            <h3>Event: Charity Run</h3>
-            <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9734; (4/5)</p>
-            <p>“Amazing experience! Looking forward to next year’s event.”</p>
-        </li>
-        <li>
-            <h3>Event: Food Festival</h3>
-            <p>Rating: &#9733;&#9733;&#9733;&#9733;&#9733; (5/5)</p>
-            <p>“Loved the variety of food and ambiance!”</p>
-        </li>
-    </ul>
-</section>
-
-
-        <!-- Saved/Favorite Events -->
-        <section class="user-favorites">
-            <h2>Saved Events</h2>
-            <ul>
-            <div class="card">
-                <div class="card-face front">
-                    <img src="images/trivia.jpeg" alt="Karaoke Night">
-                </div>
-                <div class="card-face back">
-                    <h4>Main St Trivia Night</h4>
-                    <p>Come out to Trivia Night! Drinks, Teams or Singles, all welcome! There's a $25 prize for 1st!</p>
-                </div> 
-            </div>
-            <div class="card">
-                <div class="card-face front">
-                    <img src="images/big_shoals.jpeg" alt="Big Shoals Event">
-                </div>
-                <div class="card-face back">
-                    <h4>Big Shoals Junction</h4>
-                    <p>Come by to the Flea Market.</p>
-                </div> 
-            </div>
-            </ul>
-        </section>
     </div>
     <script>
         // diplays user info
@@ -100,6 +58,19 @@
                 .catch(error => console.error("Error fetching events:", error));
     </script>
     <script>
+
+        // converts datetime to read easy
+        function formatTime(timestamp) {
+                const date = new Date(timestamp);
+                const month = String(date.getMonth() + 1).padStart(2, '0'); // Months are 0-based
+                const day = String(date.getDate()).padStart(2, '0');
+                const year = date.getFullYear();
+                let hours = date.getHours();
+                const period = hours >= 12 ? 'PM' : 'AM';
+                hours = hours % 12 || 12;
+                const minutes = String(date.getMinutes()).padStart(2, '0');
+                return `${month}/${day}/${year} ${hours}:${minutes}${period}`;
+            }
         // displays users posted events
         document.addEventListener("DOMContentLoaded", function () {
             const container = document.getElementById("eventsContainer");
@@ -113,6 +84,8 @@
     
                     // Loop through events and create cards
                     events.forEach(event => {
+                        const formattedStartTime = formatTime(event.start_time);
+                        const formattedEndTime = formatTime(event.end_time);
                         const imageUrl = `data:image/jpeg;base64,${event.event_img}`;
                         const labels = ["Free", "$", "$$", "$$$", "$$$$"];
                         const card = `
@@ -124,8 +97,8 @@
                                     <h4>${event.event_name}</h4>
                                     <p><b>Description:</b> ${event.event_description}</p>
                                     <p><b>Address:</b> ${event.event_location}</p>
-                                    <p><b>Start time:</b> ${event.start_time}</p>
-                                    <p><b>End Time:</b> ${event.end_time}</p>
+                                    <p><b>Start time:</b> ${formattedStartTime}</p>
+                                    <p><b>End Time:</b> ${formattedEndTime}</p>
                                     <p><b>Cost:</b> ${labels[event.event_cost]}</p>
                                     <form onsubmit="return confirm('Are you sure you want to delete this event?');" action="/event/delete" method="POST">
                                         <input type="hidden" name="event_id" value="${event.event_id}">
